# Assignment2

./: CMakeLists.txt  Calculate.cpp  Calculate.h  final.cpp  final.h  first.cpp  first.h  main.cpp  model.cpp  model.h  second.cpp  second.h  test.cpp  test.h
