cmake_minimum_required(VERSION 3.17)
project(Assignment2)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment2 main.cpp )
add_executable(Assignment2F first.cpp first.h )
add_executable(Assignment2S second.cpp second.h)
add_executable(Assignment2T final.cpp final.h)
add_executable(Assignment2P Calculate.cpp Calculate.h)
add_executable(Assignment2E test.cpp test.h)




